Clase modelo pasa todos los tests.